--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,8 +1,14 @@
 /* odd numbered elements */
 .odd-numbered {
     /* a light red/pink background */
-    background-color: rgb(200, 150, 150);
+    background-color: #cc9696;
     /* a list of fonts containing `Verdana` and `DejaVu Sans` 
        with `sans-serif` as a fallback */
     font-family: "Verdana", "DejaVu Sans", "sans-serif";
+}
+#second {
+    /* blue text */
+    color: rgb(25, 25, 150);
+    /* font size of 36px */
+    font-size: 36px;
 }
