Format the second element
Add a yellow background color to the second
element.

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -5,3 +5,8 @@
     /* a white text */
     color: white;
 }
+/* Format the second element */
+.second {
+    /* A yellow background */
+    background-color: yellow;
+}
