Format font for both elements
Change font size and add a list of fonts with a
fallback font to both elements.

--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -10,3 +10,12 @@
     /* A yellow background */
     background-color: yellow;
 }
+
+/* Format both elements with common font formats */
+.font {
+    /* a font size of 28 pixels */
+    font-size: 28px;
+    /* a list of fonts containing `Helvetica` and 
+       `Times New Roman`, with `sans-serif` as a fallback  */
+    font-family: "Helvetica", "Times New Roman", sans-serif;
+}
