Modify avatar and proportioned element
Modify the width and height of the element with
both the avatar and proportioned classes.

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,7 @@
 /* Add CSS Styling */
+/* Modify the element with both avatar and
+   proportioned classes */
+.avatar.proportioned {
+    width: 300px;
+    height: auto;
+}
