Modify the avatar and distorted element
Modify the width and height of the image with
both the avatar and distorted classed

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -5,3 +5,10 @@
     width: 300px;
     height: auto;
 }
+
+/* Modify the element with both avatar and
+   distorted classes */
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
+}
