Move child class and delete div before text class
Deleting div gives it less priority and moving the
child class downwards gives it more priority.

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -33,14 +33,17 @@ body {
   font-weight: bold;
 } 
 
+/* removed the div to give advantage to child
+class */
+.text {
+  color: rgb(0, 0, 0);
+  font-size: 22px;
+  font-weight: 100;
+}
+
+/* Moved after the text class to take effect */
 .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
-}
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
 }
