--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,6 +13,9 @@ body {
   background: #e3f4ff;
   /* Decrease font size */
   font-size: 18px;
+  /* Remove title's default margin and padding */
+  margin: 0;
+  padding: 0;
 }
 
 .content {
