Separate content from other elements using margin

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -22,6 +22,8 @@ body {
 
 .content {
   background: #e3f4ff;
+  /* Separate from other elements using margin */
+  margin: 10px auto;
 }
 
 .button-container {
