--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,12 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  /* Apply flexbox formatting */
   display: flex;
+  /* Make items separated equally using space-between */
   justify-content: space-between;
+  /* Center items vertically */
+  align-items: center;
 }
 
 .logo {
@@ -11,9 +15,19 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  
 }
 
 ul {
+  /* Set margin and padding */
+  margin: 1em;
+  padding: 1em;
+  /* Apply flexbox formatting */
+  display: flex;
+  /* Use gap between items */
+  gap: 1em;
+  /* Wrap items when screen is narrow */
+  flex-wrap: wrap;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
