--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -19,6 +19,11 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
 
+/* Make header flexible */
+.right {
+  margin-left: auto;
+}
+
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
