Make button stay at its original size

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -45,6 +45,8 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  /* Make button stay at its original size */
+  margin: auto;
 }
 
 a {
