Create gaps between items

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -8,9 +8,12 @@ body {
   font-family: Besley, serif;
 }
 
-/* Make containers flexbox */
+
 .header, ul, .left, .right {
+  /* Make containers flexbox */
   display: flex;
+  /* Create gap between items */
+  gap: 1em;
 }
 
 .header {
