--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,13 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.container {
+  /* Arrange and format title and items */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 img {
   width: 100px;
   height: 100px;
