--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -11,6 +11,10 @@ body {
   align-items: center;
 }
 
+.text {
+  /* Center text */
+  text-align: center;
+}
 img {
   width: 100px;
   height: 100px;
