Set gaps and padding in items

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -11,6 +11,13 @@ body {
   align-items: center;
 }
 
+.item {
+  /* Set gap between items */
+  gap: 4em;
+  /* Set padding inside item */
+  padding: 1em;
+}
+
 .text {
   /* Center text */
   text-align: center;
