--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -57,6 +57,7 @@ ul {
 
 img {
   width: 600px;
+  padding-bottom: 16px;
 }
 
 button {
@@ -64,6 +65,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  /* adjust button padding */
+  padding: 8px 16px;
+  margin: 0;
 }
 
 input {
