--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,6 +8,7 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  /* Format page header */
   display: flex;
   align-items: center;
   font-size: 32px;
@@ -31,4 +32,17 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/* Remove bullet points */
+ul {
+  list-style-type: none;
+}
+
+a {
+  /* remove link underline */
+  text-decoration: none;
+  /* format link font */
+  color: white;
+  font-size: 26px;
 }
