--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,6 +2,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  /* To push the footer down */
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -20,6 +23,11 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  /* place footer at the end of the page */
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
